--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 /* index.css */
-
+body{
+    font-family:Arial, Helvetica, sans-serif
+  }
 .titlo {
     background-color: pink;
     margin: auto;
